parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDAND
    LBRACKET
    RBRACKET
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> headers main_function
Rule 2     headers -> headers header
Rule 3     headers -> header
Rule 4     header -> HASH INCLUDE LT ID DOT ID GT
Rule 5     main_function -> type MAIN LPAREN RPAREN compound_stmt
Rule 6     type -> INT
Rule 7     type -> FLOAT
Rule 8     type -> CHAR
Rule 9     type -> VOID
Rule 10    compound_stmt -> LBRACE stmt_list RBRACE
Rule 11    stmt_list -> stmt_list statement
Rule 12    stmt_list -> statement
Rule 13    statement -> declaration SEMICOLON
Rule 14    statement -> assignment SEMICOLON
Rule 15    statement -> if_stmt
Rule 16    statement -> for_stmt
Rule 17    statement -> return_stmt
Rule 18    statement -> func_call SEMICOLON
Rule 19    statement -> compound_stmt
Rule 20    statement -> SEMICOLON
Rule 21    declaration -> type declarator_list
Rule 22    declarator_list -> declarator_list COMMA declarator
Rule 23    declarator_list -> declarator
Rule 24    declarator -> ID
Rule 25    declarator -> ID EQUALS expression
Rule 26    assignment -> ID EQUALS expression
Rule 27    if_stmt -> IF LPAREN expression RPAREN statement
Rule 28    if_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 29    for_stmt -> FOR LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN statement
Rule 30    for_init -> declaration
Rule 31    for_init -> assignment
Rule 32    for_init -> empty
Rule 33    for_update -> assignment
Rule 34    for_update -> ID PLUS PLUS
Rule 35    for_update -> empty
Rule 36    return_stmt -> RETURN expression SEMICOLON
Rule 37    func_call -> ID LPAREN arg_list RPAREN
Rule 38    arg_list -> arg_list COMMA expression
Rule 39    arg_list -> expression
Rule 40    arg_list -> empty
Rule 41    expression -> relational_expression
Rule 42    relational_expression -> additive_expression
Rule 43    relational_expression -> additive_expression LT additive_expression
Rule 44    relational_expression -> additive_expression LE additive_expression
Rule 45    relational_expression -> additive_expression GT additive_expression
Rule 46    relational_expression -> additive_expression GE additive_expression
Rule 47    relational_expression -> additive_expression EQEQ additive_expression
Rule 48    relational_expression -> additive_expression NEQ additive_expression
Rule 49    additive_expression -> additive_expression PLUS term
Rule 50    additive_expression -> additive_expression MINUS term
Rule 51    additive_expression -> term
Rule 52    term -> term TIMES factor
Rule 53    term -> term DIVIDE factor
Rule 54    term -> term MODULO factor
Rule 55    term -> factor
Rule 56    factor -> NUMBER
Rule 57    factor -> STRING_LITERAL
Rule 58    factor -> ID
Rule 59    factor -> LPAREN expression RPAREN
Rule 60    factor -> MINUS factor
Rule 61    factor -> AND ID
Rule 62    empty -> <empty>

Terminals, with rules where they appear

AND                  : 61
ANDAND               : 
CHAR                 : 8
COMMA                : 22 38
DIVIDE               : 53
DOT                  : 4
ELSE                 : 28
EQEQ                 : 47
EQUALS               : 25 26
FLOAT                : 7
FOR                  : 29
GE                   : 46
GT                   : 4 45
HASH                 : 4
ID                   : 4 4 24 25 26 34 37 58 61
IF                   : 27 28
INCLUDE              : 4
INT                  : 6
LBRACE               : 10
LBRACKET             : 
LE                   : 44
LPAREN               : 5 27 28 29 37 59
LT                   : 4 43
MAIN                 : 5
MINUS                : 50 60
MODULO               : 54
NEQ                  : 48
NUMBER               : 56
PLUS                 : 34 34 49
RBRACE               : 10
RBRACKET             : 
RETURN               : 36
RPAREN               : 5 27 28 29 37 59
SEMICOLON            : 13 14 18 20 29 29 36
STRING_LITERAL       : 57
TIMES                : 52
VOID                 : 9
WHILE                : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 42 43 43 44 44 45 45 46 46 47 47 48 48 49 50
arg_list             : 37 38
assignment           : 14 31 33
compound_stmt        : 5 19
declaration          : 13 30
declarator           : 22 23
declarator_list      : 21 22
empty                : 32 35 40
expression           : 25 26 27 28 29 36 38 39 59
factor               : 52 53 54 55 60
for_init             : 29
for_stmt             : 16
for_update           : 29
func_call            : 18
header               : 2 3
headers              : 1 2
if_stmt              : 15
main_function        : 1
program              : 0
relational_expression : 41
return_stmt          : 17
statement            : 11 12 27 28 28 29
stmt_list            : 10 11
term                 : 49 50 51 52 53 54
type                 : 5 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . headers main_function
    (2) headers -> . headers header
    (3) headers -> . header
    (4) header -> . HASH INCLUDE LT ID DOT ID GT

    HASH            shift and go to state 4

    program                        shift and go to state 1
    headers                        shift and go to state 2
    header                         shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> headers . main_function
    (2) headers -> headers . header
    (5) main_function -> . type MAIN LPAREN RPAREN compound_stmt
    (4) header -> . HASH INCLUDE LT ID DOT ID GT
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . CHAR
    (9) type -> . VOID

    HASH            shift and go to state 4
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    CHAR            shift and go to state 10
    VOID            shift and go to state 11

    main_function                  shift and go to state 5
    header                         shift and go to state 6
    type                           shift and go to state 7

state 3

    (3) headers -> header .

    HASH            reduce using rule 3 (headers -> header .)
    INT             reduce using rule 3 (headers -> header .)
    FLOAT           reduce using rule 3 (headers -> header .)
    CHAR            reduce using rule 3 (headers -> header .)
    VOID            reduce using rule 3 (headers -> header .)


state 4

    (4) header -> HASH . INCLUDE LT ID DOT ID GT

    INCLUDE         shift and go to state 12


state 5

    (1) program -> headers main_function .

    $end            reduce using rule 1 (program -> headers main_function .)


state 6

    (2) headers -> headers header .

    HASH            reduce using rule 2 (headers -> headers header .)
    INT             reduce using rule 2 (headers -> headers header .)
    FLOAT           reduce using rule 2 (headers -> headers header .)
    CHAR            reduce using rule 2 (headers -> headers header .)
    VOID            reduce using rule 2 (headers -> headers header .)


state 7

    (5) main_function -> type . MAIN LPAREN RPAREN compound_stmt

    MAIN            shift and go to state 13


state 8

    (6) type -> INT .

    MAIN            reduce using rule 6 (type -> INT .)
    ID              reduce using rule 6 (type -> INT .)


state 9

    (7) type -> FLOAT .

    MAIN            reduce using rule 7 (type -> FLOAT .)
    ID              reduce using rule 7 (type -> FLOAT .)


state 10

    (8) type -> CHAR .

    MAIN            reduce using rule 8 (type -> CHAR .)
    ID              reduce using rule 8 (type -> CHAR .)


state 11

    (9) type -> VOID .

    MAIN            reduce using rule 9 (type -> VOID .)
    ID              reduce using rule 9 (type -> VOID .)


state 12

    (4) header -> HASH INCLUDE . LT ID DOT ID GT

    LT              shift and go to state 14


state 13

    (5) main_function -> type MAIN . LPAREN RPAREN compound_stmt

    LPAREN          shift and go to state 15


state 14

    (4) header -> HASH INCLUDE LT . ID DOT ID GT

    ID              shift and go to state 16


state 15

    (5) main_function -> type MAIN LPAREN . RPAREN compound_stmt

    RPAREN          shift and go to state 17


state 16

    (4) header -> HASH INCLUDE LT ID . DOT ID GT

    DOT             shift and go to state 18


state 17

    (5) main_function -> type MAIN LPAREN RPAREN . compound_stmt
    (10) compound_stmt -> . LBRACE stmt_list RBRACE

    LBRACE          shift and go to state 20

    compound_stmt                  shift and go to state 19

state 18

    (4) header -> HASH INCLUDE LT ID DOT . ID GT

    ID              shift and go to state 21


state 19

    (5) main_function -> type MAIN LPAREN RPAREN compound_stmt .

    $end            reduce using rule 5 (main_function -> type MAIN LPAREN RPAREN compound_stmt .)


state 20

    (10) compound_stmt -> LBRACE . stmt_list RBRACE
    (11) stmt_list -> . stmt_list statement
    (12) stmt_list -> . statement
    (13) statement -> . declaration SEMICOLON
    (14) statement -> . assignment SEMICOLON
    (15) statement -> . if_stmt
    (16) statement -> . for_stmt
    (17) statement -> . return_stmt
    (18) statement -> . func_call SEMICOLON
    (19) statement -> . compound_stmt
    (20) statement -> . SEMICOLON
    (21) declaration -> . type declarator_list
    (26) assignment -> . ID EQUALS expression
    (27) if_stmt -> . IF LPAREN expression RPAREN statement
    (28) if_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (29) for_stmt -> . FOR LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN statement
    (36) return_stmt -> . RETURN expression SEMICOLON
    (37) func_call -> . ID LPAREN arg_list RPAREN
    (10) compound_stmt -> . LBRACE stmt_list RBRACE
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . CHAR
    (9) type -> . VOID

    SEMICOLON       shift and go to state 25
    ID              shift and go to state 33
    IF              shift and go to state 34
    FOR             shift and go to state 35
    RETURN          shift and go to state 36
    LBRACE          shift and go to state 20
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    CHAR            shift and go to state 10
    VOID            shift and go to state 11

    stmt_list                      shift and go to state 22
    statement                      shift and go to state 23
    declaration                    shift and go to state 24
    assignment                     shift and go to state 26
    if_stmt                        shift and go to state 27
    for_stmt                       shift and go to state 28
    return_stmt                    shift and go to state 29
    func_call                      shift and go to state 30
    compound_stmt                  shift and go to state 31
    type                           shift and go to state 32

state 21

    (4) header -> HASH INCLUDE LT ID DOT ID . GT

    GT              shift and go to state 37


state 22

    (10) compound_stmt -> LBRACE stmt_list . RBRACE
    (11) stmt_list -> stmt_list . statement
    (13) statement -> . declaration SEMICOLON
    (14) statement -> . assignment SEMICOLON
    (15) statement -> . if_stmt
    (16) statement -> . for_stmt
    (17) statement -> . return_stmt
    (18) statement -> . func_call SEMICOLON
    (19) statement -> . compound_stmt
    (20) statement -> . SEMICOLON
    (21) declaration -> . type declarator_list
    (26) assignment -> . ID EQUALS expression
    (27) if_stmt -> . IF LPAREN expression RPAREN statement
    (28) if_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (29) for_stmt -> . FOR LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN statement
    (36) return_stmt -> . RETURN expression SEMICOLON
    (37) func_call -> . ID LPAREN arg_list RPAREN
    (10) compound_stmt -> . LBRACE stmt_list RBRACE
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . CHAR
    (9) type -> . VOID

    RBRACE          shift and go to state 38
    SEMICOLON       shift and go to state 25
    ID              shift and go to state 33
    IF              shift and go to state 34
    FOR             shift and go to state 35
    RETURN          shift and go to state 36
    LBRACE          shift and go to state 20
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    CHAR            shift and go to state 10
    VOID            shift and go to state 11

    statement                      shift and go to state 39
    declaration                    shift and go to state 24
    assignment                     shift and go to state 26
    if_stmt                        shift and go to state 27
    for_stmt                       shift and go to state 28
    return_stmt                    shift and go to state 29
    func_call                      shift and go to state 30
    compound_stmt                  shift and go to state 31
    type                           shift and go to state 32

state 23

    (12) stmt_list -> statement .

    RBRACE          reduce using rule 12 (stmt_list -> statement .)
    SEMICOLON       reduce using rule 12 (stmt_list -> statement .)
    ID              reduce using rule 12 (stmt_list -> statement .)
    IF              reduce using rule 12 (stmt_list -> statement .)
    FOR             reduce using rule 12 (stmt_list -> statement .)
    RETURN          reduce using rule 12 (stmt_list -> statement .)
    LBRACE          reduce using rule 12 (stmt_list -> statement .)
    INT             reduce using rule 12 (stmt_list -> statement .)
    FLOAT           reduce using rule 12 (stmt_list -> statement .)
    CHAR            reduce using rule 12 (stmt_list -> statement .)
    VOID            reduce using rule 12 (stmt_list -> statement .)


state 24

    (13) statement -> declaration . SEMICOLON

    SEMICOLON       shift and go to state 40


state 25

    (20) statement -> SEMICOLON .

    RBRACE          reduce using rule 20 (statement -> SEMICOLON .)
    SEMICOLON       reduce using rule 20 (statement -> SEMICOLON .)
    ID              reduce using rule 20 (statement -> SEMICOLON .)
    IF              reduce using rule 20 (statement -> SEMICOLON .)
    FOR             reduce using rule 20 (statement -> SEMICOLON .)
    RETURN          reduce using rule 20 (statement -> SEMICOLON .)
    LBRACE          reduce using rule 20 (statement -> SEMICOLON .)
    INT             reduce using rule 20 (statement -> SEMICOLON .)
    FLOAT           reduce using rule 20 (statement -> SEMICOLON .)
    CHAR            reduce using rule 20 (statement -> SEMICOLON .)
    VOID            reduce using rule 20 (statement -> SEMICOLON .)
    ELSE            reduce using rule 20 (statement -> SEMICOLON .)


state 26

    (14) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 41


state 27

    (15) statement -> if_stmt .

    RBRACE          reduce using rule 15 (statement -> if_stmt .)
    SEMICOLON       reduce using rule 15 (statement -> if_stmt .)
    ID              reduce using rule 15 (statement -> if_stmt .)
    IF              reduce using rule 15 (statement -> if_stmt .)
    FOR             reduce using rule 15 (statement -> if_stmt .)
    RETURN          reduce using rule 15 (statement -> if_stmt .)
    LBRACE          reduce using rule 15 (statement -> if_stmt .)
    INT             reduce using rule 15 (statement -> if_stmt .)
    FLOAT           reduce using rule 15 (statement -> if_stmt .)
    CHAR            reduce using rule 15 (statement -> if_stmt .)
    VOID            reduce using rule 15 (statement -> if_stmt .)
    ELSE            reduce using rule 15 (statement -> if_stmt .)


state 28

    (16) statement -> for_stmt .

    RBRACE          reduce using rule 16 (statement -> for_stmt .)
    SEMICOLON       reduce using rule 16 (statement -> for_stmt .)
    ID              reduce using rule 16 (statement -> for_stmt .)
    IF              reduce using rule 16 (statement -> for_stmt .)
    FOR             reduce using rule 16 (statement -> for_stmt .)
    RETURN          reduce using rule 16 (statement -> for_stmt .)
    LBRACE          reduce using rule 16 (statement -> for_stmt .)
    INT             reduce using rule 16 (statement -> for_stmt .)
    FLOAT           reduce using rule 16 (statement -> for_stmt .)
    CHAR            reduce using rule 16 (statement -> for_stmt .)
    VOID            reduce using rule 16 (statement -> for_stmt .)
    ELSE            reduce using rule 16 (statement -> for_stmt .)


state 29

    (17) statement -> return_stmt .

    RBRACE          reduce using rule 17 (statement -> return_stmt .)
    SEMICOLON       reduce using rule 17 (statement -> return_stmt .)
    ID              reduce using rule 17 (statement -> return_stmt .)
    IF              reduce using rule 17 (statement -> return_stmt .)
    FOR             reduce using rule 17 (statement -> return_stmt .)
    RETURN          reduce using rule 17 (statement -> return_stmt .)
    LBRACE          reduce using rule 17 (statement -> return_stmt .)
    INT             reduce using rule 17 (statement -> return_stmt .)
    FLOAT           reduce using rule 17 (statement -> return_stmt .)
    CHAR            reduce using rule 17 (statement -> return_stmt .)
    VOID            reduce using rule 17 (statement -> return_stmt .)
    ELSE            reduce using rule 17 (statement -> return_stmt .)


state 30

    (18) statement -> func_call . SEMICOLON

    SEMICOLON       shift and go to state 42


state 31

    (19) statement -> compound_stmt .

    RBRACE          reduce using rule 19 (statement -> compound_stmt .)
    SEMICOLON       reduce using rule 19 (statement -> compound_stmt .)
    ID              reduce using rule 19 (statement -> compound_stmt .)
    IF              reduce using rule 19 (statement -> compound_stmt .)
    FOR             reduce using rule 19 (statement -> compound_stmt .)
    RETURN          reduce using rule 19 (statement -> compound_stmt .)
    LBRACE          reduce using rule 19 (statement -> compound_stmt .)
    INT             reduce using rule 19 (statement -> compound_stmt .)
    FLOAT           reduce using rule 19 (statement -> compound_stmt .)
    CHAR            reduce using rule 19 (statement -> compound_stmt .)
    VOID            reduce using rule 19 (statement -> compound_stmt .)
    ELSE            reduce using rule 19 (statement -> compound_stmt .)


state 32

    (21) declaration -> type . declarator_list
    (22) declarator_list -> . declarator_list COMMA declarator
    (23) declarator_list -> . declarator
    (24) declarator -> . ID
    (25) declarator -> . ID EQUALS expression

    ID              shift and go to state 45

    declarator_list                shift and go to state 43
    declarator                     shift and go to state 44

state 33

    (26) assignment -> ID . EQUALS expression
    (37) func_call -> ID . LPAREN arg_list RPAREN

    EQUALS          shift and go to state 46
    LPAREN          shift and go to state 47


state 34

    (27) if_stmt -> IF . LPAREN expression RPAREN statement
    (28) if_stmt -> IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN          shift and go to state 48


state 35

    (29) for_stmt -> FOR . LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN statement

    LPAREN          shift and go to state 49


state 36

    (36) return_stmt -> RETURN . expression SEMICOLON
    (41) expression -> . relational_expression
    (42) relational_expression -> . additive_expression
    (43) relational_expression -> . additive_expression LT additive_expression
    (44) relational_expression -> . additive_expression LE additive_expression
    (45) relational_expression -> . additive_expression GT additive_expression
    (46) relational_expression -> . additive_expression GE additive_expression
    (47) relational_expression -> . additive_expression EQEQ additive_expression
    (48) relational_expression -> . additive_expression NEQ additive_expression
    (49) additive_expression -> . additive_expression PLUS term
    (50) additive_expression -> . additive_expression MINUS term
    (51) additive_expression -> . term
    (52) term -> . term TIMES factor
    (53) term -> . term DIVIDE factor
    (54) term -> . term MODULO factor
    (55) term -> . factor
    (56) factor -> . NUMBER
    (57) factor -> . STRING_LITERAL
    (58) factor -> . ID
    (59) factor -> . LPAREN expression RPAREN
    (60) factor -> . MINUS factor
    (61) factor -> . AND ID

    NUMBER          shift and go to state 56
    STRING_LITERAL  shift and go to state 57
    ID              shift and go to state 58
    LPAREN          shift and go to state 59
    MINUS           shift and go to state 54
    AND             shift and go to state 60

    expression                     shift and go to state 50
    relational_expression          shift and go to state 51
    additive_expression            shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 55

state 37

    (4) header -> HASH INCLUDE LT ID DOT ID GT .

    HASH            reduce using rule 4 (header -> HASH INCLUDE LT ID DOT ID GT .)
    INT             reduce using rule 4 (header -> HASH INCLUDE LT ID DOT ID GT .)
    FLOAT           reduce using rule 4 (header -> HASH INCLUDE LT ID DOT ID GT .)
    CHAR            reduce using rule 4 (header -> HASH INCLUDE LT ID DOT ID GT .)
    VOID            reduce using rule 4 (header -> HASH INCLUDE LT ID DOT ID GT .)


state 38

    (10) compound_stmt -> LBRACE stmt_list RBRACE .

    $end            reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    RBRACE          reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    SEMICOLON       reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    ID              reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    IF              reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    FOR             reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    RETURN          reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    LBRACE          reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    INT             reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    FLOAT           reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    CHAR            reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    VOID            reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)
    ELSE            reduce using rule 10 (compound_stmt -> LBRACE stmt_list RBRACE .)


state 39

    (11) stmt_list -> stmt_list statement .

    RBRACE          reduce using rule 11 (stmt_list -> stmt_list statement .)
    SEMICOLON       reduce using rule 11 (stmt_list -> stmt_list statement .)
    ID              reduce using rule 11 (stmt_list -> stmt_list statement .)
    IF              reduce using rule 11 (stmt_list -> stmt_list statement .)
    FOR             reduce using rule 11 (stmt_list -> stmt_list statement .)
    RETURN          reduce using rule 11 (stmt_list -> stmt_list statement .)
    LBRACE          reduce using rule 11 (stmt_list -> stmt_list statement .)
    INT             reduce using rule 11 (stmt_list -> stmt_list statement .)
    FLOAT           reduce using rule 11 (stmt_list -> stmt_list statement .)
    CHAR            reduce using rule 11 (stmt_list -> stmt_list statement .)
    VOID            reduce using rule 11 (stmt_list -> stmt_list statement .)


state 40

    (13) statement -> declaration SEMICOLON .

    RBRACE          reduce using rule 13 (statement -> declaration SEMICOLON .)
    SEMICOLON       reduce using rule 13 (statement -> declaration SEMICOLON .)
    ID              reduce using rule 13 (statement -> declaration SEMICOLON .)
    IF              reduce using rule 13 (statement -> declaration SEMICOLON .)
    FOR             reduce using rule 13 (statement -> declaration SEMICOLON .)
    RETURN          reduce using rule 13 (statement -> declaration SEMICOLON .)
    LBRACE          reduce using rule 13 (statement -> declaration SEMICOLON .)
    INT             reduce using rule 13 (statement -> declaration SEMICOLON .)
    FLOAT           reduce using rule 13 (statement -> declaration SEMICOLON .)
    CHAR            reduce using rule 13 (statement -> declaration SEMICOLON .)
    VOID            reduce using rule 13 (statement -> declaration SEMICOLON .)
    ELSE            reduce using rule 13 (statement -> declaration SEMICOLON .)


state 41

    (14) statement -> assignment SEMICOLON .

    RBRACE          reduce using rule 14 (statement -> assignment SEMICOLON .)
    SEMICOLON       reduce using rule 14 (statement -> assignment SEMICOLON .)
    ID              reduce using rule 14 (statement -> assignment SEMICOLON .)
    IF              reduce using rule 14 (statement -> assignment SEMICOLON .)
    FOR             reduce using rule 14 (statement -> assignment SEMICOLON .)
    RETURN          reduce using rule 14 (statement -> assignment SEMICOLON .)
    LBRACE          reduce using rule 14 (statement -> assignment SEMICOLON .)
    INT             reduce using rule 14 (statement -> assignment SEMICOLON .)
    FLOAT           reduce using rule 14 (statement -> assignment SEMICOLON .)
    CHAR            reduce using rule 14 (statement -> assignment SEMICOLON .)
    VOID            reduce using rule 14 (statement -> assignment SEMICOLON .)
    ELSE            reduce using rule 14 (statement -> assignment SEMICOLON .)


state 42

    (18) statement -> func_call SEMICOLON .

    RBRACE          reduce using rule 18 (statement -> func_call SEMICOLON .)
    SEMICOLON       reduce using rule 18 (statement -> func_call SEMICOLON .)
    ID              reduce using rule 18 (statement -> func_call SEMICOLON .)
    IF              reduce using rule 18 (statement -> func_call SEMICOLON .)
    FOR             reduce using rule 18 (statement -> func_call SEMICOLON .)
    RETURN          reduce using rule 18 (statement -> func_call SEMICOLON .)
    LBRACE          reduce using rule 18 (statement -> func_call SEMICOLON .)
    INT             reduce using rule 18 (statement -> func_call SEMICOLON .)
    FLOAT           reduce using rule 18 (statement -> func_call SEMICOLON .)
    CHAR            reduce using rule 18 (statement -> func_call SEMICOLON .)
    VOID            reduce using rule 18 (statement -> func_call SEMICOLON .)
    ELSE            reduce using rule 18 (statement -> func_call SEMICOLON .)


state 43

    (21) declaration -> type declarator_list .
    (22) declarator_list -> declarator_list . COMMA declarator

    SEMICOLON       reduce using rule 21 (declaration -> type declarator_list .)
    COMMA           shift and go to state 61


state 44

    (23) declarator_list -> declarator .

    COMMA           reduce using rule 23 (declarator_list -> declarator .)
    SEMICOLON       reduce using rule 23 (declarator_list -> declarator .)


state 45

    (24) declarator -> ID .
    (25) declarator -> ID . EQUALS expression

    COMMA           reduce using rule 24 (declarator -> ID .)
    SEMICOLON       reduce using rule 24 (declarator -> ID .)
    EQUALS          shift and go to state 62


state 46

    (26) assignment -> ID EQUALS . expression
    (41) expression -> . relational_expression
    (42) relational_expression -> . additive_expression
    (43) relational_expression -> . additive_expression LT additive_expression
    (44) relational_expression -> . additive_expression LE additive_expression
    (45) relational_expression -> . additive_expression GT additive_expression
    (46) relational_expression -> . additive_expression GE additive_expression
    (47) relational_expression -> . additive_expression EQEQ additive_expression
    (48) relational_expression -> . additive_expression NEQ additive_expression
    (49) additive_expression -> . additive_expression PLUS term
    (50) additive_expression -> . additive_expression MINUS term
    (51) additive_expression -> . term
    (52) term -> . term TIMES factor
    (53) term -> . term DIVIDE factor
    (54) term -> . term MODULO factor
    (55) term -> . factor
    (56) factor -> . NUMBER
    (57) factor -> . STRING_LITERAL
    (58) factor -> . ID
    (59) factor -> . LPAREN expression RPAREN
    (60) factor -> . MINUS factor
    (61) factor -> . AND ID

    NUMBER          shift and go to state 56
    STRING_LITERAL  shift and go to state 57
    ID              shift and go to state 58
    LPAREN          shift and go to state 59
    MINUS           shift and go to state 54
    AND             shift and go to state 60

    expression                     shift and go to state 63
    relational_expression          shift and go to state 51
    additive_expression            shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 55

state 47
